# heimburg_jackson

./: .gitignore  .pre-commit-config.yaml  README.md  describe.py  iHJ.py  plot.py  pyproject.toml  requirements.txt  solve.py
configs/: baseline.yaml  gamma_sweep.yaml
configs/bachelor/: a1a2.yaml  baseline.yaml  eta.yaml  gamma.yaml
heimburg_jackson/: conversions.py  io.py  models.py
